--- a/package.json
+++ b/package.json
@@ -34,19 +34,21 @@
     "husky": "^1.3.1",
     "jasmine-core": "^3.4.0",
     "jsdoc": "^3.5.5",
-    "karma": "^5.0.9",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^2.0.1",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-jasmine": "^5.0.1",
     "karma-rollup": "^1.0.1",
     "karma-safari-launcher": "^1.0.0",
-    "karma-typescript": "^5.0.2",
+    "karma-typescript": "^5.5.3",
+    "karma-webpack": "^5.0.0",
     "lint-staged": "^8.1.4",
     "prettier": "2.0.5",
     "rollup": "^2.8.2",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-typescript2": "^0.27.1",
-    "typescript": "^3.8.3"
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3"
   },
   "config": {
     "commitizen": {
